--- a/exerciicios do livro-js-html/ex5_c.1html/5°index.html
+++ b/exerciicios do livro-js-html/ex5_c.1html/5°index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo 1.1 Saída de dados coma lert</title>
+    <title> Tipos de variáveis</title>
 </head>
 <body>
-    <script src="1°script.js"></script>
+    <script src="5°javascript.js"></script>
 </body>
 </html>
