--- a/exerciicios do livro-js-html/ex6_c.1html/6°index.html
+++ b/exerciicios do livro-js-html/ex6_c.1html/6°index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="pt-br">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> String convertidaemnúmero</title>
+    <title>Cálculo do dobro de um número</title>
 </head>
 <body>
-    <script src="4°script.js"></script>
+    <script src="6°javascript.js"></script>
 </body>
 </html>
