--- a/exerciicios do livro-js-html/ex2_c.1html/2°index.html
+++ b/exerciicios do livro-js-html/ex2_c.1html/2°index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="pt-br ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo 1.2 Entrada de dadose uso devariáveis</title>
 </head>
